--- a/nodejs/packages/layer/tsconfig.json
+++ b/nodejs/packages/layer/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build_backup"
+    "outDir": "build"
   },
   "include": [
     "src/**/*.ts",
