--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.23.1'
+          go-version: "^1.23.1"
       - name: build
         run: make -C collector package GOARCH=${{ matrix.architecture }}
       - uses: actions/upload-artifact@v4
@@ -63,22 +63,8 @@ jobs:
           - amd64
           - arm64
         aws_region:
-          - ap-northeast-1
-          - ap-northeast-2
-          - ap-south-1
-          - ap-southeast-1
-          - ap-southeast-2
-          - ca-central-1
-          - eu-central-1
-          - eu-north-1
-          - eu-west-1
-          - eu-west-2
-          - eu-west-3
-          - sa-east-1
           - us-east-1
           - us-east-2
-          - us-west-1
-          - us-west-2
     with:
       artifact-name: opentelemetry-collector-layer-${{ matrix.architecture }}.zip
       layer-name: opentelemetry-collector
