--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -64,6 +64,7 @@ jobs:
             LAYER_NAME=$LAYER_NAME-${{ inputs.release-group }}
           fi
 
+          CLEAN_VERSION=$(echo "${{ inputs.component-version }}" | sed -r 's/\./_/g')
           LAYER_NAME=$LAYER_NAME-${{ inputs.component-version }}
           echo "LAYER_NAME=$LAYER_NAME" >> $GITHUB_ENV
 
