--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -42,6 +42,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: List files in repository root
+        run: ls -al
+
+      - name: List files in collector directory
+        run: ls -al collector
+
       - name: Construct Layer Name
         shell: bash
         run: |
