--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -42,12 +42,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: List files in repository root
-        run: ls -al
-
-      - name: List files in collector directory
-        run: ls -al collector
-
       - name: Construct Layer Name
         shell: bash
         run: |
@@ -70,8 +64,7 @@ jobs:
             LAYER_NAME=$LAYER_NAME-${{ inputs.release-group }}
           fi
 
-          LAYER_VERSION=$(cat VERSION)
-          LAYER_VERSION_CLEANED=$(echo "$LAYER_VERSION" | sed -r 's/\./_/g')
+          CLEAN_VERSION=$(echo "${{ inputs.component-version }}" | sed -r 's/\./_/g')
 
           LAYER_NAME=$LAYER_NAME-$LAYER_VERSION_CLEANED
           echo "LAYER_NAME=$LAYER_NAME" >> $GITHUB_ENV
