--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -77,12 +77,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish-layer
     steps:
+      - uses: actions/checkout@v4
+
       - name: Append Layer ARNs to Release Body
         run: |
-          ARCHITECTURE=${{ matrix.architecture }}
           COLLECTOR_VERSION=${{ needs.build-layer.outputs.COLLECTOR_VERSION }}
-          MESSAGE="Layer ARN:\narn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-$ARCHITECTURE-$COLLECTOR_VERSION:1"
 
+          MESSAGE="### Lambda Layers for OpenTelemetry Collector v${COLLECTOR_VERSION}\n\n"
+          MESSAGE+="**amd64 (x86_64):**\n"
+          MESSAGE+="\`arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-x86_64-${COLLECTOR_VERSION//./_}:1\`\n\n"
+          MESSAGE+="**arm64:**\n"
+          MESSAGE+="\`arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-arm64-${COLLECTOR_VERSION//./_}:1\`\n\n"
+
+          # Append the message to the release notes
           gh release view ${{ github.ref_name }} --json body -q .body > release_body.md
           echo -e "\n$MESSAGE" >> release_body.md
           gh release edit ${{ github.ref_name }} --notes-file release_body.md
