--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -75,7 +75,9 @@ jobs:
 
   update-release:
     runs-on: ubuntu-latest
-    needs: publish-layer
+    needs:
+      - publish-layer
+      - build-layer
     steps:
       - uses: actions/checkout@v4
 
@@ -83,11 +85,16 @@ jobs:
         run: |
           COLLECTOR_VERSION=${{ needs.build-layer.outputs.COLLECTOR_VERSION }}
 
-          MESSAGE="### Lambda Layers for OpenTelemetry Collector v${COLLECTOR_VERSION}\n\n"
-          MESSAGE+="**amd64 (x86_64):**\n"
-          MESSAGE+="\`arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-x86_64-${COLLECTOR_VERSION//./_}:1\`\n\n"
-          MESSAGE+="**arm64:**\n"
-          MESSAGE+="\`arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-arm64-${COLLECTOR_VERSION//./_}:1\`\n\n"
+          MESSAGE="### Lambda Layers for OpenTelemetry Collector (v${COLLECTOR_VERSION})\n\n"
+          MESSAGE+="The following Lambda layers are available for this release. Use the appropriate ARN for your Lambda architecture:\n\n"
+          MESSAGE+="#### 🖥️ **amd64 (x86_64)**\n"
+          MESSAGE+="\`\`\`\n"
+          MESSAGE+="arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-amd64-${COLLECTOR_VERSION//./_}:1\n"
+          MESSAGE+="\`\`\`\n\n"
+          MESSAGE+="#### 📱 **arm64**\n"
+          MESSAGE+="\`\`\`\n"
+          MESSAGE+="arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-arm64-${COLLECTOR_VERSION//./_}:1\n"
+          MESSAGE+="\`\`\`\n\n"
 
           # Append the message to the release notes
           gh release view ${{ github.ref_name }} --json body -q .body > release_body.md
