--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.23.1'
+          go-version: "^1.23.1"
       - name: build
         run: make -C collector package GOARCH=${{ matrix.architecture }}
       - uses: actions/upload-artifact@v4
@@ -87,3 +87,33 @@ jobs:
       release-group: prod
       aws_region: ${{ matrix.aws_region }}
     secrets: inherit
+
+  update-release:
+    runs-on: ubuntu-latest
+    needs:
+      - publish-layer
+      - build-layer
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Append Layer ARNs to Release Body
+        run: |
+          COLLECTOR_VERSION=${{ needs.build-layer.outputs.COLLECTOR_VERSION }}
+
+          MESSAGE="### Lambda Layers for OpenTelemetry Collector (${COLLECTOR_VERSION})\n\n"
+          MESSAGE+="The following Lambda layers are available for this release. Use the appropriate ARN for your Lambda architecture:\n\n"
+          MESSAGE+="#### 🖥️ **amd64 (x86_64)**\n"
+          MESSAGE+="\`\`\`\n"
+          MESSAGE+="arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-amd64-${COLLECTOR_VERSION//./_}:1\n"
+          MESSAGE+="\`\`\`\n\n"
+          MESSAGE+="#### 📱 **arm64**\n"
+          MESSAGE+="\`\`\`\n"
+          MESSAGE+="arn:aws:lambda:<region>:486140753397:layer:logzio-opentelemetry-collector-arm64-${COLLECTOR_VERSION//./_}:1\n"
+          MESSAGE+="\`\`\`\n\n"
+
+          # Append the message to the release notes
+          gh release view ${{ github.ref_name }} --json body -q .body > release_body.md
+          echo -e "\n$MESSAGE" >> release_body.md
+          gh release edit ${{ github.ref_name }} --notes-file release_body.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
