--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -87,7 +87,7 @@ jobs:
       layer-name: opentelemetry-nodejs
       component-version: ${{needs.build-layer.outputs.NODEJS_VERSION}}
       # architecture:
-      runtimes: nodejs18.x nodejs20.x
+      runtimes: nodejs18.x nodejs20.x nodejs22.x
       release-group: prod
       aws_region: ${{ matrix.aws_region }}
     secrets: inherit
