--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -87,6 +87,8 @@ jobs:
       layer-name: opentelemetry-nodejs
       component-version: ${{needs.build-layer.outputs.NODEJS_VERSION}}
       # architecture:
+      # If you add a nodejs runtime here, please make sure that the collector/Makefile publish and publish-layer targets
+      # get updated as well
       runtimes: nodejs18.x nodejs20.x nodejs22.x
       release-group: prod
       aws_region: ${{ matrix.aws_region }}
