--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -26,17 +26,17 @@ jobs:
           pwd
           last_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
           echo "::set-output name=last_tag::$last_tag"
-      # The following 10 lines of code were human modified suggestions given by GitHub Copilot 
+      # The following 15 lines of code were human modified suggestions given by GitHub Copilot 
       - name: Increment tag version
         id: increment_tag
         run: |          
           last_tag=${{ steps.get_last_tag.outputs.last_tag }}
           prefix=$(echo $last_tag | cut -d'/' -f1)
-          major_minor=$(echo $last_tag | cut -d'/' -f2 | cut -d'.' -f1,2)
+          major=$(echo $last_tag | cut -d'/' -f2 | cut -d'.' -f1)
+          minor=$(echo $last_tag | cut -d'/' -f2 | cut -d'.' -f2)
           patch=$(echo $last_tag | cut -d'.' -f3)
-          x=$(echo $major_minor | cut -d'.' -f2)  
-          new_x=$((x + 1))
-          new_tag="$prefix/0.$new_x.0"
+          new_major=$((major + 1))
+          new_tag="$prefix/$new_major.0.0"
           git tag $new_tag
           git push origin $new_tag
           echo "::set-output name=new_tag::$new_tag"
@@ -62,7 +62,7 @@ jobs:
         with:
           go-version: '^1.23.1'
       - name: build
-        run: make -C collector package GOARCH=${{ matrix.architecture }}
+        run: make -C collector package GOARCH=${{ matrix.architecture }} BUILDTAGS="lambdacomponents.custom,lambdacomponents.all"
       - uses: actions/upload-artifact@v4
         with:
           name: opentelemetry-collector-layer-${{ matrix.architecture }}.zip
