--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -44,21 +44,38 @@
     "@opentelemetry/exporter-metrics-otlp-http": "^0.57.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.57.0",
     "@opentelemetry/instrumentation": "^0.57.0",
+    "@opentelemetry/instrumentation-amqplib": "^0.46.1",
     "@opentelemetry/instrumentation-aws-lambda": "^0.50.0",
     "@opentelemetry/instrumentation-aws-sdk": "^0.49.0",
+    "@opentelemetry/instrumentation-bunyan": "^0.45.1",
+    "@opentelemetry/instrumentation-cassandra-driver": "^0.45.1",
+    "@opentelemetry/instrumentation-connect": "^0.43.1",
+    "@opentelemetry/instrumentation-dataloader": "^0.16.1",
     "@opentelemetry/instrumentation-dns": "^0.43.0",
     "@opentelemetry/instrumentation-express": "^0.47.0",
+    "@opentelemetry/instrumentation-fs": "^0.19.1",
     "@opentelemetry/instrumentation-graphql": "^0.47.0",
     "@opentelemetry/instrumentation-grpc": "^0.57.0",
     "@opentelemetry/instrumentation-hapi": "^0.45.0",
     "@opentelemetry/instrumentation-http": "^0.57.0",
     "@opentelemetry/instrumentation-ioredis": "^0.47.0",
+    "@opentelemetry/instrumentation-kafkajs": "^0.7.1",
+    "@opentelemetry/instrumentation-knex": "^0.44.1",
     "@opentelemetry/instrumentation-koa": "^0.47.0",
+    "@opentelemetry/instrumentation-memcached": "^0.43.1",
     "@opentelemetry/instrumentation-mongodb": "^0.51.0",
+    "@opentelemetry/instrumentation-mongoose": "^0.46.1",
     "@opentelemetry/instrumentation-mysql": "^0.45.0",
+    "@opentelemetry/instrumentation-mysql2": "^0.45.2",
+    "@opentelemetry/instrumentation-nestjs-core": "^0.44.1",
     "@opentelemetry/instrumentation-net": "^0.43.0",
     "@opentelemetry/instrumentation-pg": "^0.51.0",
+    "@opentelemetry/instrumentation-pino": "^0.46.1",
     "@opentelemetry/instrumentation-redis": "^0.46.0",
+    "@opentelemetry/instrumentation-restify": "^0.45.1",
+    "@opentelemetry/instrumentation-socket.io": "^0.46.1",
+    "@opentelemetry/instrumentation-undici": "^0.10.1",
+    "@opentelemetry/instrumentation-winston": "^0.44.1",
     "@opentelemetry/propagator-aws-xray": "^1.26.0",
     "@opentelemetry/propagator-aws-xray-lambda": "^0.53.0",
     "@opentelemetry/resource-detector-aws": "^1.11.0",
