build: add support for Python 3.13 in CI and deployment configurations

--- a/python/src/template.yml
+++ b/python/src/template.yml
@@ -19,5 +19,6 @@ Resources:
         - python3.10
         - python3.11
         - python3.12
+        - python3.13
     Metadata:
       BuildMethod: makefile
