--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Save Node SDK Version
         id: save-node-sdk-version
         run: |
-          SDK_VERSION=$(node version.js)
+          SDK_VERSION=$(npm list @opentelemetry/core --depth=0 | grep @opentelemetry/core | sed 's/^.*@//')
           echo "SDK_VERSION=$SDK_VERSION" >> $GITHUB_OUTPUT
         working-directory: nodejs/packages/layer/scripts
 
