--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -43,6 +43,7 @@
     "@opentelemetry/exporter-logs-otlp-http": "^0.57.2",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.57.2",
     "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
+    "@opentelemetry/exporter-zipkin": "^2.0.0",
     "@opentelemetry/instrumentation": "^0.57.2",
     "@opentelemetry/instrumentation-amqplib": "^0.46.1",
     "@opentelemetry/instrumentation-aws-lambda": "^0.50.3",
