--- a/.github/workflows/publish-layer-collector.yml
+++ b/.github/workflows/publish-layer-collector.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
-          go-version: '~1.21.9'
+          go-version-file: collector/go.mod
       - name: Build Collector
         run: |
           if [[ -n "${{ inputs.build-tags }}" ]]; then
