fix: NodeJS sample (#1840)
* fix: NodeJS sample

* feat: add build sample to CI

* fix: eslint

* fix: lint

* fix: typo

* fix: logging -> console

* fix: logging -> console

* fix: put back terraform as a deployment option

* fix: forgotten @aws-sdk/client-sts

* lint: terraform

* fix: PR comments

* fix: typo

* fix: packaging

* fix: PR comment, removing dependency

--- a/.github/workflows/ci-nodejs.yml
+++ b/.github/workflows/ci-nodejs.yml
@@ -37,3 +37,6 @@ jobs:
         working-directory: nodejs
       - run: npm test
         working-directory: nodejs
+      - name: Build AWS SDK Sample
+        run: npm run build
+        working-directory: nodejs/sample-apps/aws-sdk
